# cllm_temp

./: .gitignore  FIXES_COMPLETED.md  PHASE3_MULTIBYTE_DIAGNOSIS.md  README.md  TODO.md  diag_add_overflow.py  diag_add_simple.py  diag_add_v2.py  diag_compare_modes.py
c4_release/: .gitignore  .pre-commit-config.yaml  ADDRESSING_FIXES_SUMMARY.md  ADD_SUB_FIX.md  ADJ_IMPLEMENTATION_PLAN.md  ATTENTION_BASED_EVICTION_ANALYSIS.md  AUTOREGRESSIVE_PURITY_AUDIT.md  AUTOREGRESSIVE_VM_ACHIEVEMENT.md  BATCHING_ANALYSIS.md  BEFORE_AFTER_COMPARISON.md  BUG_FIX_SESSION_SUMMARY.md  BUG_REPORT.md  BUNDLER_STATUS.md  COMPLETED_WORK_SUMMARY.md  CONSTANTS_USAGE_EXAMPLES.md  CONTAMINATION_PREVENTION_GUIDE.md  CONVERSATIONAL_IO_BUG_FIX_SUMMARY.md  CRITICAL_BUG_REPORT.md  CRITICAL_FINDINGS.md  CURRENT_STATUS.md  CURRENT_STATUS_UPDATED.md  CURRENT_TEST_STATUS.md  DIMENSION_ALLOCATION_PLAN.md  ENT_MINIMIZED.md  EVICTION_POLICY_COMPLETE.md  EXECUTION_STATUS.md  EXPECTED_TEST_RESULTS.md  FAILURES_FIXED.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_STATUS_SUMMARY.md  FINAL_VALIDATION_STATUS.txt  FINAL_VERIFICATION.md  FIX_SUMMARY.md  FULL_OPCODE_COMPILATION_DESIGN.md  FULL_TEST_SUITE_SUCCESS.md  GPU_TEST_RESULTS.md  HANDLER_FIXES_SUMMARY.md  IMM_BUG_ANALYSIS.md  (+587 more)
c4_release/bundler/: autoregressive_runtime.c  bundle_c4.c  c4_bundler.c  c4_compile.c  neural_bundler.c  neural_bundler.py  neural_c4_bundle.c  neural_c4_bundler.c  neural_runtime.c  onnx_bundler.c  onnx_vm_runtime.c  optimized_bundler.c  optimized_runtime.c  simple_c_runtime.c
c4_release/cllm/: argv_test_cllm.c  cat_cllm.c  echo_cllm.c  head_cllm.c  memtest_cllm.c  nl_cllm.c  quine_cllm.c  rev_cllm.c  tail_cllm.c  tee_cllm.c  uniq_cllm.c  wc_cllm.c  yes_cllm.c
c4_release/debug_archive/: add_l6_pc_inc.py  analyze_jsr.py  analyze_layer6_head_usage.py  analyze_params.py  analyze_speculation_blocking.py  check_addr_key_2.py  check_address_2.py  check_all_ops_layers.py  check_byte_position.py  check_dim262.py  check_dim_usage.py  check_dim_values.py  check_hidden_dims.py  check_initial_pc.py  check_jsr_addr_keys.py  check_jsr_bytecode.py  check_jsr_opcode.py  check_l5_weights.py  check_l5_weights_fixed.py  check_l6_unit1368.py  check_l9_ffn.py  check_layer3_output.py  check_layer7_ffn_ax_carry.py  check_layer7_weights.py  check_mark_pc.py  check_mark_pc_at_pos29.py  check_op_lea_positions.py  check_opcode_addr_key.py  check_token_ids.py  compare_imm_vs_jsr.py  compare_lea_attn.py  comprehensive_jsr_debug.py  debug_97_opcodes.py  debug_add_correct.py  debug_add_neural_weights.py  debug_add_output_lo1.py  debug_add_simple.py  debug_add_step4.py  debug_add_step_trace.py  debug_add_trace.py  (+243 more)
c4_release/demos/: autoregressive_quine.py  comparison.drawio  complex_tests_c4.c  mandelbrot_color_png_c4.c  sudoku  sudoku.c
c4_release/docs/: ACTUAL_FIX_AX_CARRY.md  ADD_INVESTIGATION.md  ADD_ROOT_CAUSE_FOUND.md  AGENT_CONTEXT.md  ARCH_LEAKAGE_FIX_PLAN.md  AUTOREGRESSIVE_IO_ARCHITECTURE_ANALYSIS.md  AUTOREGRESSIVE_IO_PLAN.md  AUTOREGRESSIVE_IO_PROGRESS.md  AUTOREGRESSIVE_IO_STATE_MACHINE.md  BDGE_FLATTEN_PLAN.md  BD_SETDIM_HARDCODE_AUDIT.md  BLOG_SPEC.md  BUG_ROOT_CAUSE_JSR_LEV.md  CARRY_PROPAGATION_VALIDATION.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPILER_FEATURE_PARITY_CHECKLIST.md  COMPLETION_PLAN.md  CONVERSATIONAL_IO_COMPLETE.md  CONVERSATIONAL_IO_FINAL_STATUS.md  CONVERSATIONAL_IO_FIX_NEEDED.md  CONVERSATIONAL_IO_PROGRESS.md  CONVERSATIONAL_IO_STATUS.md  CONVERSATIONAL_IO_TODO.md  CUDA_GRAPHS_MULTI_STEP.md  DEBUGGING_IMPLEMENTATION_SUMMARY.md  DEBUGGING_IMPROVEMENTS.md  DECLARATIVE_BAKE_VISION.md  DECLARATIVE_VERIFICATION.md  DECLARATIVE_VERIFICATION_AUDIT.md  DIM_OWNERSHIP_REGISTRY.md  DOCUMENT_FIXES.md  FIX_ATTEMPT_SUMMARY.md  FIX_AX_CARRY_ISSUE.md  FLASH_ATTENTION_INTEGRATION.md  FOLDER_STRUCTURE.md  GRAPH_WEIGHT_COMPILER.md  HANDLER_DEPENDENCY_DISCOVERY.md  HANDLER_ELIMINATION_STATUS.md  IMPLEMENTATION_STATUS.md  INJECT_MEM_EXEC_MIGRATION_PLAN.md  (+80 more)
c4_release/graphs/: generate_graphs.py
c4_release/models/: baked_echo.c4onnx  baked_quine.c4onnx  config.json  from_onnx.c4onnx  transformer_vm.c4onnx
c4_release/neural_vm/: DEBUGGING_QUICK_REFERENCE.md  DEBUG_TOOLS_README.md  FIX_SUMMARY.md  PURITY_CHECK_CHANGELOG.md  __init__.py  alu_integration.py  alu_optimized.py  alu_weight_extractor.py  autoregressive_nibble_vm.py  base_layers.py  base_layers.py.current_broken  base_layers.py.manual_bias  batch_runner.py  batch_runner_v2.py  batched_pure_neural.py  bit_primitives.py  byte_efficient_alu.py  config.py  constants.py  contracts.py  cuda_graph_bench.py  debugger.py  dim_registry.py  efficient_add.py  efficient_alu.py  efficient_alu_8bit.py  efficient_alu_addsub_split.py  efficient_alu_byte.py  efficient_alu_divmod_split.py  efficient_alu_integrated.py  efficient_alu_neural.py  efficient_byte_alu.py  efficient_integration.py  efficient_wrappers.py  embedding.py  eviction_policy.py  fast_runner.py  full_opcode_mapper.py  fully_neural_vm.py  graph_weight_compiler.py  (+42 more)
(+977 files in other folders)
